# reviews

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  fly.toml  mix.exs
.github/workflows/: ci.yml  fly-review.yml
.plans/: a11y-design-fixes.md  phoenix-base-path-support.md  review-packet-prd.md  review-packet-rfc-revised.md  review-packet-rfc.md  review-packet-spec.md
assets/: package-lock.json  package.json
assets/css/: app.css
assets/js/: app.js  schemas.js
assets/js/hooks/: diff_renderer.js
assets/js/lib/: fp.js  translate.js
cli/: Cargo.toml
cli/src/: api.rs  config.rs  git.rs  main.rs  packet.rs
cli/src/commands/: comment.rs  diff.rs  login.rs  mod.rs  push.rs  show.rs  whoami.rs
cli/tests/: integration.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: CONTRACTS.md  PREVIEW_ENVS.md  RELEASE.md
lib/: reviews_web.ex
lib/reviews/: accounts.ex  anchoring.ex  application.ex  design_system.ex  packet_section_decisions.ex  release.ex  repo.ex  review_navigation.ex  review_packet.ex  review_view.ex  reviews.ex  threads.ex
lib/reviews/accounts/: api_token.ex  user.ex
lib/reviews/reviews/: file.ex  packet_section_decision.ex  patchset.ex  review.ex
lib/reviews/threads/: comment.ex  review_summary.ex  thread.ex
lib/reviews_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/reviews_web/components/: core_components.ex  design_system_components.ex  layouts.ex
test/reviews/: anchoring_test.exs  release_test.exs  review_packet_test.exs  review_view_test.exs  threads_test.exs
(+36 files in other folders)
