[package]
name = "reviews"
version = "0.1.0"
edition = "2021"
description = "CLI for the Reviews code review tool"

[[bin]]
name = "reviews"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.10"
